2005-08-03  Per Bothner  <per@bothner.com>

	* obj-test.scm: Test new (*:METHOD ...) syntax.

2005-07-27  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add moduleFT.scm.

2005-07-23  Per Bothner  <per@bothner.com>

	* misc-test.scm: New tests, from Common Lisp hyperspec, for testing
	*print-radix* and *print-base*.

	* misc-test.scm: New test for future inside fluid-let.

2005-07-20  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test based on Savanah bug report #13821.

2005-06-27  Per Bothner  <per@bothner.com>

	* classes1.scm (<SimapleA>): A bunch of new methods to test various
	accesses nested in lambda's inside methods.
	One test is a bug reported by Dean Ferreyra 2005-06-09.
	* obj-test.scm: Test them.

2005-06-02  Per Bothner  <per@bothner.com>

	Add test for re-exported imported macro.
	* module0.scm (mod0-m1): Return result as vector rather than sum.
	* module3.scm (test3-import1): Also test mod0-m1 invocation.
	* obj-test.scm: Update expected result.

2004-10-26  Chris Dean  <ctdean@sokitomi.com>

	* obj-test.scm:  Add test of (this) closure
	* classes1.scm:  ibid.
	This tests Savannah bug #10806.

2005-05-19  Per Bothner  <per@bothner.com>

	* misc-test.scm (test-opt-args): New function.
	Tests, among other things, Savannah bug #10613.

2005-05-17  Per Bothner  <per@bothner.com>

	* misc-test.scm: Change fluid-let test result to match new semantics.

2005-05-10  Per Bothner  <per@bothner.com>
	    Dominique Boucher  <dominique.boucher@nuecho.com>

	* moduleFT.scm: New module.
	* Makefile.am: Build new file and have check-misc depend on it.
	* misc-test.scm: New test invoking neg-abs from moduleFT.

2005-04-21  Per Bothner  <per@bothner.com>

	* MyModule.java: Remove redundant import.

2005-04-20  Per Bothner  <per@bothner.com>

	Add various tests for re-export of imported declarations.
	* module0.scm: New file.
	* Makefile.am: Update accordingly.
	* module1.scm: Add explicit module-export so we can re-export some